--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <!-- update-->
   <style>
     .loader{
         position: absolute;
