--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Blair St Property</title>
+
+  <!--stripe-->
+  <script src="https://js.stripe.com/v3/"></script>
 
   <!-- IE Edge Meta Tag-IE 8 and beyond-Equivalent to html5 doctype -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -70,5 +72,6 @@
             </image>
         </svg>
   </app-root>
+
 </body>
 </html>
